tests/snapshots/run_wpt_conformance__trtx_matmul_float32_4D_and_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "matmul.https.any.js",
    "matmul float32 4D and 4D tensors",
    "trtx",
    "PASS",
)
